--- a/.symfony.cloud.yaml
+++ b/.symfony.cloud.yaml
@@ -1,6 +1,6 @@
 timezone: Europe/Paris
 
 crons:
-    update_repo:
+    csv_parse:
         spec: 0 7-19 * * *
         cmd: croncape bin/console CSVParser:parse
